# dbx-cv-client

./: .gitignore  README.md  generate_zerobus_table_sql.ps1  generate_zerobus_table_sql.sh  install-uv.ps1  install-uv.sh  pyproject.toml
src/dbx_cv_client/: __init__.py  cli.py  client.py  generate_proto.py  ip_info.py  options.py
src/dbx_cv_client/cam_reader/: cam_reader.py  directory_reader.py  meraki_reader.py  rtsp_reader.py
src/dbx_cv_client/commands/: client.py  common.py  generate_proto.py
src/dbx_cv_client/models/: __init__.py  record.proto
tests/: connect_test.py  mock_meraki_server.py  test_meraki_reader.py
