[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-cv-client"
version = "0.1.0"
description = "CLI client for streaming data to Databricks Change Vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "databricks-zerobus-ingest-sdk",
  "typer",
  "grpcio-tools>=1.60.0,<2.0"
]

[project.scripts]
dbx-cv-client = "dbx_cv_client.cli:app"

[project.optional-dependencies]
dev = ["pytest"]

[tool.uv]
package = true