[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-cv-client"
version = "0.0.1+g0f354d6"
description = "CLI client for streaming data to Databricks ingestion tables"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "azure-identity",
    "azure-keyvault-secrets",
    "databricks-zerobus-ingest-sdk",
    "grpcio-tools>=1.60.0,<2.0",
    "numpy",
    "opencv-python-headless",
    "dnspython",
    "pyaml",
    "cyclopts",
]

[project.scripts]
dbx-cv-client = "dbx_cv_client.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "lfp_build @ git+https://github.com/regbo/lfp-build-py.git",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true
